# StoryMoss

./: .brooks-lint-history.json  .env  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  ARCHITECTURE_UPDATE.md  AUDIT_GAP_REPORT_v5.1.md  AUDIT_REPORT_v0.9.0.md  BROOKS_SWEEP_OPTIMIZATION_PLAN.md  CHANGELOG.md  CLAUDE.md  CODE_AUDIT_REPORT.md  CODE_AUDIT_REPORT_V4.md  DESIGN_IMPLEMENTATION_ALIGNMENT_PLAN.md  DESIGN_IMPLEMENTATION_ALIGNMENT_v5.6.4.md  DESIGN_SYSTEM.md  FIXES_SUMMARY.md  IMPLEMENTATION_PLAN.md  IPC_INTERFACE_REPORT.md  KIMI.md  PERFORMANCE_FIX_PLAN.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PLAN_Alignment_v5.1.md  PLAN_Frontstage_Backstage.md  PLAN_NarrativeModel_Refactor.md  PLAN_task_system.md  PROJECT_IMPROVEMENT_PLAN.md  PROJECT_STATUS.md  QA-Stage1-report.md  QA-Stage2-report.md  QA-Stage3-report.md  README.md  ROADMAP.md  RUN.md  SERVER_DEPLOYMENT.md  SKILLS_INSTALLED.md  SKILLS_SUMMARY.md  TESTING.md  (+23 more)
.claude/: settings.local.json
.githooks/: pre-commit
.planning/: DESIGN_IMPLEMENTATION_ALIGNMENT_v5.6.4.md
docs/: API_CONSISTENCY_AUDIT.md  AUDIT_BACKSTAGE_STUDIO_v0.26.24.md  AUDIT_BACKSTAGE_STUDIO_v0.26.34.md  AUDIT_后台资产与智能创作流程.md  AUDIT_提示词工程.md  BROOKS_LINT_ARCHITECTURE_AUDIT_v0.22.4.md  BROOKS_LINT_HEALTH_DASHBOARD_v0.26.28.md  CREATION_FLOW_AND_ASSETS_REFERENCE.md  CREATIVE_ASSETS_AUDIT_v0.22.4.md  FEATURES.md  FULL_CODE_AUDIT_REPORT.md  (+7 more)
src-server/: Cargo.toml  Dockerfile
src-server/migrations/: 001_init_auth.sql
src-server/src/: config.rs  main.rs
src-server/src/api/: health.rs
src-server/src/auth/: oauth.rs
(+1080 files in other folders)
