[package]
name = "storymoss-server"
version = "4.5.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4"
actix-cors = "0.7"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }

# Authentication
oauth2 = "5.0"
jsonwebtoken = "9"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1.16", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
once_cell = "1.19"

# Async runtime
tokio = { version = "1.44", features = ["full"] }

# URL parsing
url = "2"

[dev-dependencies]
actix-rt = "2"
